# container-builder

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ContainerBuilder.spack  ContainerBuilderTitan.def  LICENSE.txt  README.md  builder.def  deploy-openstack.sh  deploy-summitdev.sh  deploy-titan.sh  deploy.sh  queue-host  singularity_backend.def
Builder/: main.cpp  main_heartbeat.cpp
Builder/include/: Builder.h
Builder/scripts/: docker-builder-backend.sh  singularity-builder-backend.sh
Builder/src/: Builder.cpp  main.cpp
BuilderQueue/include/: BuilderQueue.h  Connection.h  Docker.h  OpenStack.h  OpenStackBuilder.h  Reservation.h  ReservationRequest.h  Server.h
BuilderQueue/scripts/: list-images.sh
BuilderQueue/src/: BuilderQueue.cpp  Connection.cpp  OpenStack.cpp  OpenStackBuilder.cpp  Reservation.cpp  ReservationRequest.cpp  main.cpp
Client/: main.cpp  main_heartbeat.cpp
Client/include/: Client.h  WaitingAnimation.h
Client/src/: Client.cpp  images.cpp  main.cpp  status.cpp
Common/include/: Builder.h  BuilderData.h  ClientData.h  FileMover.h  FileReader.h  FileWriter.h  Logger.h  Message.h  Messenger.h  ReadFile.h  ReadMessage.h  Resource.h  WriteFile.h  WriteMessage.h
Common/src/: Builder.cpp  BuilderData.cpp  FileMover.cpp  FileReader.cpp  FileWriter.cpp  Logger.cpp  Message.cpp  Message.h  Messenger.cpp  ReadFile.cpp  ReadMessage.cpp  WriteFile.cpp  WriteMessage.cpp
Deployment/: create-builder-image.sh  create-queue.sh  deploy-summit.sh  deploy-summitdev.sh  deploy-titan.sh  provision-builder.sh  provision-queue.sh
Provisioning/: create-builder-image.sh  create-queue.sh  deploy-openstack.sh  deploy-summitdev.sh  deploy-titan.sh
ResourceManager/include/: Builder.h  Connection.h  DockerBackend.h  Resource.h  ResourceQueue.h  SingularityBackend.h
ResourceManager/src/: Connection.cpp  Reservation.cpp  Resource.cpp  ResourceQueue.cpp  SingularityBackend.cpp  main.cpp
ResourceQueue/include/: BuilderQueue.h  Connection.h  OpenStackBuilder.h  OpenStackResource.h  Reservation.h  ReservationRequest.h  ResourceQueue.h
ResourceQueue/scripts/: BringUpBuilder  ProvisionQueue.sh  TearDown
ResourceQueue/src/: BuilderQueue.cpp  Connection.cpp  OpenStackBuilder.cpp  OpenStackResource.cpp  Reservation.cpp  ReservationRequest.cpp  ResourceQueue.cpp  main.cpp
Scripts/: BringUpBuilder  BringUpQueue  ContainerBuilderTitan.def  CreateBaseContainers  CreateBuilder  CreateBuilderImage  DestroyBuilder  DestroyBuilderImage  DisableTcpTimestamps  DockerBuilderBackend  GetBuilders  ProvisionBuilder  ProvisionBuilder.sh  ProvisionQueue  ProvisionQueue.sh  README.md  RequestCreateBuilder  SingularityBuilderBackend  TearDownBuilder  TearDownQueue  bring-up-queue.sh  create-builder-image.sh  create-builder.sh  create-queue.sh  destroy-builder-image.sh  destroy-builder.sh  destroy-queue.sh  docker-builder-backend.sh  ppc_builder.def  provision-builder.sh  provision-queue.sh  recipe_list  singularity-builder-backend.sh  tear-down-queue.sh
Server/include/: Builder.h  Connection.h  DockerBackend.h  Logger.h  Reservation.h  ReservationRequest.h  Resource.h  SingularityBackend.h
Server/scripts/: BringUp  OpenStack.cer  SingularityBackend.sh  build.sh  builder.def  singularity_backend.def
Server/src/: Builder.cpp  Connection.cpp  DockerBackend.cpp  Logger.cpp  ReservationRequest.cpp  Resource.cpp  ResourceQueue.cpp  SingularityBackend.cpp  main.cpp
spack-etc/: compilers.yaml  packages.yaml
spack-etc-summitdev/: compilers.yaml
spack-repo/: README.md
spack-repo/containerbuilder/: repo.yaml
tests/: README.md  run.sh
tests/integration/: README.md  build_with_spack.sh  test_bring_up_queue_doesnt_clobber_unrelated_boxes.sh
